--- a/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.css
+++ b/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.css
@@ -11,3 +11,8 @@ div[class="row justify-content-center"]{
     font-size: 13px;
     margin-top: 2px;
   }
+
+.subtitle-form{
+    font-weight: 500;
+    font-size: 1.5em;
+}
