--- a/Proyecto/src/app/componentes/sitioAdmin/grupos-permisos/grupos-permisos.component.html
+++ b/Proyecto/src/app/componentes/sitioAdmin/grupos-permisos/grupos-permisos.component.html
@@ -4,6 +4,9 @@
     <div id="tabla" class="table-responsive">
         
         <h2>Permisos y Grupos</h2>
+        <div>
+            <button (click) = "crearUser()" class="btn btn-primary btn-block">Agregar nuevo usuario</button>
+        </div>
         <div class="table-wrapper">
             <table class="table table-striped table-hover">
                 <thead>
@@ -17,10 +20,10 @@
                 </thead>
                 <tbody *ngFor="let user of listUsuarios">
                     <tr>
-                        <td #id >{{user.id}}</td>
-                        <td>{{user.is_superuser}}</td>
-                        <td>{{user.username}}</td>
-                        <td>{{user.email}}</td>
+                        <td #id >{{user.user.id}}</td>
+                        <td>{{user.user.is_superuser}}</td>
+                        <td>{{user.user.username}}</td>
+                        <td>{{user.user.email}}</td>
                         <td>
                             <button (click) = "envioId(id)" class="btn btn-primary btn-block">Editar</button>
                         </td>
