--- a/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
@@ -39,7 +39,7 @@
                                         <div class="row mb-3">
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
-                                                    <input class="form-control" id="inputNumphone" name="telefono" type="text" placeholder="Enter your phone" formControlName = "telefono">
+                                                    <input class="form-control" id="inputNumphone" name="telefono" type="text" placeholder="Enter your phone" formControlName = "telefono" maxlength="10">
                                                     <label for="inputFirstName">Telefono</label>
                                                     <span class="lead error" *ngIf="(formRef.submitted && registroForm.get('telefono')?.hasError('required')) || registroForm.get('telefono')?.hasError('minlength') || registroForm.get('telefono')?.hasError('maxlength') || registroForm.get('telefono')?.hasError('pattern')">*Ingrese numero telefono válido</span>
                                                 </div>
