--- a/Proyecto/src/app/componentes/sitioAdmin/partials/nav-admin/nav-admin.component.html
+++ b/Proyecto/src/app/componentes/sitioAdmin/partials/nav-admin/nav-admin.component.html
@@ -21,12 +21,12 @@
                 </a>
             </li>
             
-            <li *ngIf="viewUser" class="nav-item">
+            <!-- <li *ngIf="viewUser" class="nav-item">
                 <a class="nav-link" href="/clientes">
                     <span data-feather="users"></span>
                     Usuarios
                 </a>
-            </li>
+            </li> -->
             <li class="nav-item">
                 <a class="nav-link" href ="/grupos-permisos">
                     <span data-feather="bar-chart-2"></span>
