Seccion empresa, componentes perfil usuario, perfil empresa, documentos, permisos y grupos

--- a/frontend/Proyecto/src/app/componentes/empresa/grupos-permisos/grupos-permisos.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/grupos-permisos/grupos-permisos.component.html
@@ -1,6 +1,6 @@
-<header-admin></header-admin>
+<header-empresa></header-empresa>
 <div id="container">
-    <nav-admin></nav-admin>
+    <nav-empresa></nav-empresa>
     <div id="tabla" class="table-responsive">
         
         <h2>Permisos y Grupos</h2>
