--- a/frontend/Proyecto/src/app/componentes/cliente/nav-client/nav-client.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/nav-client/nav-client.component.html
@@ -9,22 +9,17 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/cambiar_contraseña">
-                    <span data-feather="cliente"></span>
+                    <span data-feather="cambiar_contraseña"></span>
                     Cambiar Contraseña
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/perfil">
-                    <span data-feather="cliente"></span>
+                    <span data-feather="perfil"></span>
                     Perfil
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">
-                    <span data-feather="cliente"></span>
-                    **********
-                </a>
-            </li> 
+             
         </ul>
     </div>
 </nav>
