--- a/frontend/Proyecto/src/app/componentes/empresa/pop-up/pop-up.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/pop-up/pop-up.component.html
@@ -1,7 +1,5 @@
-<header-admin></header-admin>
 <div class ="row">
-    <nav-admin class ="col-5"></nav-admin>
-    <div class="col-7">
+    <div class="col-11 mx-auto">
         <div id="title"><span>
                 <h1 class="text-center">Editar informacion de usuario</h1>
             </span></div>
