--- a/frontend/Proyecto/src/app/componentes/cliente/vista-cliente/vista-cliente.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/vista-cliente/vista-cliente.component.html
@@ -1,18 +1,15 @@
-<head>
+<!-- <head>
     <title>Cliente</title>
 </head>
 
-<body>
+<body> -->
     <header-client></header-client>
-    <div id="container">
-        <nav-client></nav-client>
-        <div id="Documentos">
-            <documentos></documentos>
-        </div>
+    <nav-client></nav-client>
+<!-- 
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-</body>
+</body> -->
