--- a/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
@@ -1,32 +1,37 @@
-<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-    <div class="position-sticky">
-        <ul class="nav flex-column">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/view-company">
-                    <span data-feather="view-company"></span>
-                    Inicio
-                </a>
-            </li>
+<div id="container-body">
+    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+        <div class="position-sticky">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/view-company">
+                        <span data-feather="view-company"></span>
+                        Inicio
+                    </a>
+                </li>
 
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/profile-user">
-                    <span data-feather="profile-user"></span>
-                    Perfil
-                </a>
-            </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" routerLink="profile-user">
+                        <span data-feather="profile-user"></span>
+                        Perfil
+                    </a>
+                </li>
 
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/documentos-company">
-                    <span data-feather="documentos-company"></span>
-                    Documentos
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/grupos-permisos">
-                    <span data-feather="grupos-permisos"></span>
-                    Permisos y Grupos
-                </a>
-            </li> 
-        </ul>
-    </div>
-</nav>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" routerLink="documentos-company">
+                        <span data-feather="documentos-company"></span>
+                        Documentos
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" routerLink="grupos-permisos">
+                        <span data-feather="grupos-permisos"></span>
+                        Permisos y Grupos
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <section id="dashboard-content" class="col">
+        <router-outlet></router-outlet>
+    </section>
+</div>
