--- a/frontend/Proyecto/src/app/componentes/sitioAdmin/partials/nav-admin/nav-admin.component.css
+++ b/frontend/Proyecto/src/app/componentes/sitioAdmin/partials/nav-admin/nav-admin.component.css
@@ -4,10 +4,10 @@
 
 #container-nav{
     display: flex;
-    width: 224px;}
+    width: 100%;}
 
 ul{
-    width: 229px;
+    width: 100%;
 }
 
 a{
@@ -17,4 +17,10 @@ a{
     border: 0.1px solid black;
     padding-top: 20px;
     padding-bottom: 20px;
+}
+
+#container-body{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
 }
