Cambios en vistas de cliente y empresa, Validaciones en los componentes

--- a/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
@@ -4,27 +4,42 @@
         <div id="title">
             <h1>Cambiar Contraseña</h1>
         </div>
-        <form #form autocomplete="off" novalidate #formRef="ngForm">
+        <form #form autocomplete="off" novalidate #formRef="ngForm" [formGroup]="changePassword">
             <div class="row mb-3" id="formulario">
                 <div id="campos">
-                    <div class="col-md-5 mt-2 mb-4 ">
-                        <label for="inputActualPassword">Contraseña Actual</label>
-                        <input class="form-control" id="inputActualPassword" name="actualPassword" type="password">
-
+                    <div class="col-md-5 mt-4 mb-4 w-50">
+                        <div class="form-floating">
+                            <input class="form-control" id="inputActualPassword" name="actualPassword" type="password"
+                                placeholder="Ingrese su contraseña" formControlName='actualpassword'>
+                            <label for="inputActualPassword">Contraseña Actual</label>
+                        </div>
                     </div>
-                    <div class="col-md-5 mb-4">
-                        <label for="inputNewPassword">Nueva Contraseña</label>
-                        <input class="form-control" id="inputNewPassword" name="newPassword" type="password">
-
+                    <div class="col-md-5 mb-4 w-50">
+                        <div class="form-floating">
+                            <input class="form-control" id="inputNewPassword" name="newPassword" type="password"
+                            placeholder="Ingrese su nueva contraseña" formControlName='password'>
+                            <label for="inputNewPassword">Nueva Contraseña</label>
+                            <span class="lead error" *ngIf="(formRef.submitted  && changePassword.get('password')?.hasError('required')) || changePassword.get('password')?.hasError('pattern')">
+                                Ingrese una contraseña que contenga:<br>
+                                ◆ Al menos 1 Minuscula<br>
+                                ◆ Al menos 1 Mayúscula<br>
+                                ◆ Al menos 1 Numero<br>
+                                ◆ Al menos 1 Caracter especial<br>
+                                ◆ Mínimo 8 caracteres</span>
+                        </div>
                     </div>
-                    <div class="col-md-5 mb-4">
-                        <label for="inputEmail">Confirmar Contraseña</label>
-                        <input class="form-control" id="inputEmail" name="mailorganizacion" type="password">
-
+                    <div class="col-md-5 mb-4 w-50">
+                        <div class="form-floating">
+                            <input class="form-control" id="inputConfPassword" name="confPassword" type="password"
+                            placeholder="Ingresa nuevamente su nueva contraseña" formControlName='confpassword'>
+                            <label for="inputEmail">Confirmar Contraseña</label>
+                            <span class="lead error"*ngIf="validacionPassword()">La contraseñas no coinciden</span>
+                        </div>
+                    </div>
+                    <div class="col-md-5 mb-4 w-50 text-center">
+                        <input value="Actualizar" [disabled]="formRef.control.invalid" class="btn btn-primary btn-block w-75">
                     </div>
                 </div>
-
-
             </div>
         </form>
     </div>
