--- a/frontend/Proyecto/src/app/componentes/cliente/perfil/perfil.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/perfil/perfil.component.html
@@ -4,35 +4,50 @@
         <div id="title">
             <h1>Perfil</h1>
         </div>
-        <form #form autocomplete="off" novalidate #formRef="ngForm">
+        <form #form autocomplete="off" novalidate #formRef="ngForm" [formGroup]='profile'>
             <div class="row mb-3" id="formulario">
                 <div id="campos">
-                    <div class="col-md-5 mt-5 mb-4 ">
-                        <label for="inputRazonSocial">Razón Social</label>
-                        <input #razonSocial readonly class="form-control" id="inputRazonSocial" name="razonsocial"
-                            type="text">
-
-                    </div>
-                    <div class="col-md-5 mb-4">
-                        <label for="inputRUC">RUC</label>
-                        <input #rucInput class="form-control" readonly id="inputRUC" name="ruc" type="text">
-
-                    </div>
-                    <div class="col-md-5 mb-4">
-                        <label for="inputDireccion">Dirección</label>
-                        <input class="form-control" id="inputDireccion" name="direccion" type="text">
+                    <div class="col-md-5 mt-5 mb-4 w-50">
+                        <div class="form-floating">
+                            <input #razonSocial readonly class="form-control" id="inputRazonSocial" name="razonsocial"
+                                type="text">
+                            <label for="inputRazonSocial">Razón Social</label>
+                        </div>
                     </div>
 
-                    <div class="col-md-5 mb-4">
-                        <label for="inputEmail">Correo Electrónico</label>
-                        <input class="form-control" id="inputEmail" name="mailorganizacion" type="email">
-
+                    <div class="col-md-5 mt-4 mb-4 w-50">
+                        <div class="form-floating">                            
+                            <input #rucInput class="form-control" readonly id="inputRUC" name="ruc" type="text">
+                            <label for="inputRUC">RUC</label>
+                        </div>
                     </div>
 
+                    <div class="col-md-5 mt-4 mb-4 w-50">
+                        <div class="form-floating">
+                            
+                            <input class="form-control" id="inputDireccion" name="direccion" type="text" placeholder="Ingrese su dirección" formControlName='direccion'>
+                            <label for="inputDireccion">Dirección</label>
+                        </div>
+                    </div>
 
-                    <div class="col-md-5 mb-5">
-                        <label for="inputNumphone">Teléfono</label>
-                        <input class="form-control" id="inputNumphone" name="telefono" type="text">
+                    <div class="col-md-5 mt-4 mb-4 w-50">
+                        <div class="form-floating">
+                            <input class="form-control" id="inputEmail" name="mailorganizacion" type="email" placeholder="name@example.com" formControlName='email'>
+                            <label for="inputEmail">Correo Electrónico</label>
+                            <span class="lead error" *ngIf="(formRef.submitted && profile.get('email')?.hasError('required')) || profile.get('email')?.hasError('minlength') ||  profile.get('email')?.hasError('pattern')">Ingrese email válido</span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5 mt-4 mb-4 w-50">
+                        <div class="form-floating">
+                            <input #telf class="form-control" id="inputNumphone" name="telefono" type="text" placeholder="Ingrese su numero de telefono" (input)="validate.validarCampNum(telf,10)" formControlName='telefono' maxlength="10">
+                            <label for="inputNumphone">Teléfono</label>
+                            <span class="lead error" *ngIf="(formRef.submitted && profile.get('telefono')?.hasError('required')) || profile.get('telefono')?.hasError('minlength') || profile.get('telefono')?.hasError('maxlength')">Ingrese numero telefono válido</span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5 mb-5 w-50 text-center">
+                        <input value="Actualizar" [disabled]="formRef.control.invalid" class="btn btn-primary btn-block w-75">
                     </div>
                 </div>
             </div>
